fixing flex bug on ios

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -354,6 +354,7 @@ footer{
 @import 'small';
 @import 'horizontal-timeline';
 
-[class*="reverse"] > * {
+[class*="reverse"] > *,
+[class*="column"] > * {
     flex: 1;
 }
